added resources and marcelo's summary changes

--- a/mapping.tex
+++ b/mapping.tex
@@ -6,6 +6,10 @@
 
 \chapter{Mapping}
 
+\emph{Mapping} is a concept that is useful in a number of disciplines. Within the discipline of designing digital musical instruments, mapping refers to the relationship between sensor outputs and sound synthesis algorithm inputs in a DMI. It has been shown that the choice of mapping is a primary factor in the design of DMIs \cite{hunt2003}. Designers must have a clear sense of the space of possible configurations for a given set of control sensors and sound synthesizers, if they are to devise mapping strategies that effectively translate their design intentions into a functioning system. 
+
+It follows from this foundational premise that the methods a designer's tools use to frame the space of possible configurations greatly influences the final design of the DMI. For instance, when dealing with a musical system with large numbers of sensors and synthesis algorithms with many inputs, it is not a trivial task to decide what configuration out of the thousands or tens of thousands (or even more) of possible configurations to use. It is not practical to test every possible mapping. Instead, it is important that the tools a designer uses allow them to develop an integrative understanding of the relationships between the inputs and outputs in a network and quickly rule out large numbers of configurations. The first step towards this goal is acquiring a thorough understanding of the concept of mapping.
+
 \section{Mappings in Theory}
 
 The term \emph{mapping} is used in mathematics, computer science, and related technical fields to encapsulate the concept of a \emph{function} and other related concepts under one abstraction. Like most technical terms used in multiple technical disciplines, the meaning of \emph{mapping} varies according to the context of the field that it is used. However in the case of mapping, the variation is subtle enough that a cursory understanding of the way mapping is used in a couple of contexts outside of DMIs might illuminate why it is a necessary and valuable concept to encapsulate in the context of new musical interfaces and help understand what is required for an interface designed specifically for mapping.
@@ -332,7 +336,7 @@ The syntax of the message for modifying properties of a connection is similar to
 
 It may be noticed from this syntax that the Mapper protocol supports only \emph{one-to-one} and \emph{one-to-many} mappings between sets of signals. An output signal can be connected to one or many different input signals. However, the syntax does not provide a mechanism for specifying how to handle one input signal receiving a signal from multiple output signals. The added complexity of handling a \emph{many-to-one} or \emph{many-to-many} mapping maybe introduced into the Mapper protocol at a future time.
 
-These special Mapper messages as defined by their message headers and syntax comprise what is referred to in this paper as the \emph{Mapper protocol}. By sending messages from this set of messages recognized by Libmapper it is possible to configure mappings between an arbritrarily large collection of devices on a local network with relatively little work and without understanding OSC.
+These special Mapper messages as defined by their message headers and syntax comprise what is referred to in this paper as the \emph{Mapper protocol}. By sending messages from this set of messages recognized by Libmapper it is possible to configure mappings between an arbitrarily large collection of devices on a local network with relatively little work and without understanding OSC.
 
 \section{Sensor Networks}
 
@@ -344,9 +348,9 @@ The concept of a sensor network is useful because it strikes a good balance of s
 
 A DMI can be understood as a particular form of sensor network that is particularly localized and stable. Particularly, if all of the sensors, processing nodes (perhaps each running an instance of Libmapper), and sound generation mechanism are all housed in a single physical object. Typically, no academic would refer to such a DMI as a sensor network, however it would technically fall under the working definition used in this paper. A sensor network may include functionality that compensates for unreliable sensors and devices that enter and leave the network relatively often, especially for a large, distributed network, which is not necessary in a DMI with comparatively few and robust sensors. The larger the network, the more effort must be made to handle sensor and device failure. Hardware failure and reliability is a topic outside of the scope of this thesis, but is an important practical distinction between systems that are typically termed \emph{DMIs} and systems termed \emph{sensor networks}.
 
-Framing a DMI as a sensor network affords one the ability to imagine what form a more \emph{sensor network-like} DMI might take. Additionally, because the task of mapping is fundamentally seen as a task of network topology configuration in this thesis, it is a better term to use when focusing on the mapping layer of a musical system. A single DMI might consist of many spatially-distributed control devices that each output signals connected to the inputs of a sound generation device. Or an orchestra of DMIs might be understood to be one musical sensor network that together produce one collection of sound. The argument is that understanding what is being built in terms of a sensor network, as opposed to individual DMIs that may or may not be played together, better reflects the pecularities of what a DMI fundamentally is and why the task of building a DMI is so different from building an acoustic musical instrument.
+Framing a DMI as a sensor network affords one the ability to imagine what form a more \emph{sensor network-like} DMI might take. Additionally, because the task of mapping is fundamentally seen as a task of network topology configuration in this thesis, it is a better term to use when focusing on the mapping layer of a musical system. A single DMI might consist of many spatially-distributed control devices that each output signals connected to the inputs of a sound generation device. Or an orchestra of DMIs might be understood to be one musical sensor network that together produce one collection of sound. The argument is that understanding what is being built in terms of a sensor network, as opposed to individual DMIs that may or may not be played together, better reflects the peculiarities of what a DMI fundamentally is and why the task of building a DMI is so different from building an acoustic musical instrument.
 
-Additionally, perhaps such a reframing might better work \emph{with} the pecularities of a DMI and lessen the extent to which design teams work against the inate characteristics of computers attempting to make DMIs in the image of acoustic musical instruments. After all, as previously discussed, this fundemental difference between a DMI and acoustic musical instrument is what introduces the task of mapping as unique to DMIs in the first place. For convenience, the term \emph{musical sensor network} (MSN) will be used in the remainder of this paper to reference this particular framing of the DMI concept in contexts that might be helped by this alternative concept. However, the two terms can usually be used interchangably without being inaccurate. 
+Additionally, perhaps such a reframing might better work \emph{with} the peculiarities of a DMI and lessen the extent to which design teams work against the inate characteristics of computers attempting to make DMIs in the image of acoustic musical instruments. After all, as previously discussed, this fundamental difference between a DMI and acoustic musical instrument is what introduces the task of mapping as unique to DMIs in the first place. For convenience, the term \emph{musical sensor network} (MSN) will be used in the remainder of this paper to reference this particular framing of the DMI concept in contexts that might be helped by this alternative concept. However, the two terms can usually be used interchangeably without being inaccurate. 
 
 \section{Usability and Graphical User Interfaces}
 
@@ -358,4 +362,11 @@ Any tools and interfaces that speed up this iterative process and reduce the amo
 
 Advances in user interface design are, historically, a need driven by the specifics of the nature of the system that the user requires an interface to manipulate. Similarly, data visualization design is driven by the need of a user to develop understanding of a system from a complex set of data about the system so that they can correctly manipulate the system to match their intentions. 
 
-This chapter has been a foundation for understanding the interface and visualization design decisions that are made in Chapter 4 as coupled to the requirements and need for a mapping system. The next chapter presents a foundation for understanding the decisions in Chapter 4 as coupled to what is known about what type of visualizations make a system easy to understand and what type of interfaces are effective for manipulating systems.
+\section{Summary}
+
+Mapping is a theoretical concept that is applicable to many different scenarios. However, the basic elements of the concept tend to remain intact throughout its usage in different disciplines. Understanding the differences and similarities between its usage in mathematics, computer science, and DMIs allows one to develop an understanding of the concept, in a way that minimizes the dependency on domain specific language. 
+
+Since the goal is to design a tool that allows a person without excessive technical knowledge to configure mappings in musical systems, this understanding is important for determining how the concept of mapping can be simplified by ignoring non-essential aspects in the context of DMIs. The result of this research process is the, arguably, simpler concept of MSNs to reframe DMIs in terms that emphasize the connections between elements of the network that make up a musical system. 
+
+In this way, this chapter has been a foundation for understanding the interface and visualization design decisions that are made in Chapter 4 as coupled to the requirements and need for a mapping system. The next chapter presents a foundation for understanding the decisions in Chapter 4 as coupled to what is known about what type of visualizations make a system easy to understand and what type of interfaces are effective for manipulating systems.
+
