--- a/user_interface_and_data_visualization_design.tex
+++ b/user_interface_and_data_visualization_design.tex
@@ -18,7 +18,7 @@ The concerns of user interface designers have changed considerably since people 
 
 The oldest computer interfaces largely depend on punch cards and paper tape as control mechanisms and paper printers for output and program feedback. On machines used during the 1950s and 1960s, in order to input a program and a dataset into a computer, first one prepares a deck of punched cards with a typewriter-like machine, then one feeds the deck to the computer \cite{oshistory2011}. Some machines can also mount reels of magnetic tape that store oft-used or previously generated datasets or precompiled utility software. On these early machines, a particular program being run from a deck of punch cards is assumed to have control of all the available resources of the computer. There would be no other resident software running on the machine handling auxiliary tasks like on modern computers. Any hardware devices required by a particular program like punch card readers and line printers have to be handled completely by the user program contained in the deck of cards fed to the machine. 
 
-\emph{Operating systems} development grew out of the growing complexity of computer systems involving many cooperating devices, which themselves mirrored growth of the complexity of the programs that were written for them. It makes little sense for a user of a machine to write basic operating software for interfacing with the same peripheral devices as every other user of the computer every time they run a program on such a machine. Since any user of a computer during the 1960s needed to enter a queue to reserve time to run their program on a machine they shared with their entire organization, any time wasted debugging low-level interactions with input and output devices is a major setback \cite{operatingsystems2010}. Consequently, machines were developed that included libraries of code to take care of low-level control and provide easier access to input and output devices as always resident services. This collection of software that is permanantly resident on a machine became known as a \emph{batch monitor} \cite{os2000}. A user's program could link to these preloaded libraries without including the operating logic explicitly within their own program code. This shift is often cited as the genesis of the modern operating system.
+\emph{Operating systems} development grew out of the growing complexity of computer systems involving many cooperating devices, which themselves mirrored growth of the complexity of the programs that were written for them. It makes little sense for a user of a machine to write basic operating software for interfacing with the same peripheral devices as every other user of the computer every time they run a program on such a machine. Since any user of a computer during the 1960s needed to enter a queue to reserve time to run their program on a machine they shared with their entire organization, any time wasted debugging low-level interactions with input and output devices is a major setback \cite{operatingsystems2010}. Consequently, machines were developed that included libraries of code to take care of low-level control and provide easier access to input and output devices as always resident services. This collection of software that is permenantly resident on a machine became known as a \emph{batch monitor} \cite{os2000}. A user's program could link to these preloaded libraries without including the operating logic explicitly within their own program code. This shift is often cited as the genesis of the modern operating system.
 
 In addition to providing access to input/output devices, the monitor provides services to perform error checking on user submitted programs and for generating useful feedback to the user concerning the progress of execution of a user program. The idea of generating ``useful" feedback, and what this might mean, can be understood as the first instance of an explicitly designed user interface and the birth of user interface design \cite{unix2008}.
 
@@ -225,6 +225,10 @@ The principle of \emph{tight coupling} in a user interface is of particular inte
 
 Typically, when searching a database, the system state begins by displaying an empty set of data because no query has been made. Once a query is executed than the interface displays a subset of data (in graphical or textual form) that corresponds to the elements of the entire data set that match the search query. Conversely, when filtering a data set, the initial state of the system with an empty query is to display the entire set of available data and to reduce the amount of information on the screen as the query becomes more specific. The difference is admittedly subtle. However, when a user is introduced to a large data set for the first time, the filtering convention is much less confusing because it is much more disorienting to be presented with a empty set of data than it is to be presented with too much data \cite{seeking1994}. In the former case, it is more difficult for a user to determine what the first action to take should be.
 
-The purpose of introducing these aspects of cognition and effective design that others have discovered is not to provide a set of \emph{rules} to govern the decisions that are made in the Vizmapper design. Many of these connections between interfaces and cognition are not rigorously provable in the sense that the principles of physics or electrical engineering are arguably provable. One of goals of the introduction of this thesis, and specifically the initial quotation, is to make this clear from the outset. 
+\section{Summary}
 
-However, this is the minimum due diligence that ought to be applied when making a good faith attempt to \emph{improve} how someone accomplishes a task. The history and research reviewed in this chapter provide a solid theoretical foundation for tackling the broad problem of designing a user interface, and the specific problem of visualizing and manipulating a large data set through a graphical user interface. 
+Often when dealing with modern computers systems, it is easy to forget all of the tiny, interrelated decisions that have influenced the interfaces that are used by people when interacting with computers. Yet, as the history of computers illustrates, it has a direct influence on how people end up using computers. As the advent of DMIs is a relatively recent happening in the longer history of digital computers, it makes sense to appreciate how specific decisions about computer interfaces broadened the use of computers and how similar decisions about the interface of a mapping tool might encourage a similar broadening of the use of computers in music. 
+
+Human-computer interaction practitioners and cognitive scientists provide us with several methodological tools to guide such a design of a graphical user interface. However, the purpose of introducing these aspects of cognition and effective design that others have discovered is not to provide a set of \emph{rules} to govern the decisions that are made in the Vizmapper design. Many of these connections between interfaces and cognition are not rigorously provable in the sense that the principles of physics or electrical engineering are arguably provable. One of goals of the introduction of this thesis, and specifically the initial quotation, is to make this clear from the outset. 
+
+However, this is the minimum due diligence that ought to be applied when making a good faith attempt to \emph{improve} how someone accomplishes a task and encourage the proper mindset when performing the task. The history and research reviewed in this chapter provide a solid theoretical foundation for tackling the broad problem of designing a user interface, and the specific problem of visualizing and manipulating a large data set through a graphical user interface. 
