--- a/vijay_thesis.tex
+++ b/vijay_thesis.tex
@@ -83,7 +83,7 @@ This thesis builds upon work encompassed in two projects at the Input Devices an
 
 Many thanks to my supervisor, Professor Marcelo M. Wanderley, for his abundance of available time for his students and helping me integrate my personal work with the work of others at the Input Devices and Music Interaction Laboratory (IDMIL).
 
-I am grateful to have been in the presence of all the students and professors of Music Technology at McGill University. Never have I been part of a group of people who were so eager to offer their time to others who needed help, regardless of whether they had something to gain from it. Special thanks to Joseph Malloch and Stephen Sinclair, without whose help and hours of work on the Mapper project I would never have been able to even contemplate this research project.
+I am grateful to have been in the presence of all the students and professors of Music Technology at McGill University. Never have I been part of a group of people who were so eager to offer their time to others who needed help, regardless of whether they had something to gain from it. Special thanks to Joseph Malloch and Stephen Sinclair, without whose help and hours of work on the Mapper Tools project I would never have been able to even contemplate this research project.
 
 I would never have made it to this point or survived the Montreal winters if it was not for Vincent Freour, a boundless source of energy who pulled me out into the sunlight even when I was determined to remain in my cave.
 
@@ -131,6 +131,7 @@ Finally, infinite gratitude to my parents Pandu and Padma who have always and wi
 
 %========== Appendices
 \appendix
+\include{resources}
 \include{definitions}
 
 %==========
