--- a/vizmapper.tex
+++ b/vizmapper.tex
@@ -421,4 +421,4 @@ Comparing these screenshots of the Vizmapper with the Maxmapper display of the s
 
 \section{Summary}
 
-The Vizmapper interface provides all the functionality necessary to create a mapping on a Mapper network. The central argument is that through the process of understanding the mapping task and researching user interface design principles, data visualization principles, and human cognitive processes, this thesis research has resulted in an effective interface for configuring mappings that scales to a MSN with many signals.
+This chapter explained how the Vizmapper interface provides all the functionality necessary to create a mapping on a Mapper network. The central argument is that through the process of understanding the mapping task and researching user interface design principles, data visualization principles, and human cognitive processes, this thesis research has resulted in an effective interface for configuring mappings that scales to a MSN with many signals. The proof of this will be in the future use of the tool, as no user testing has been conducted, however past research into graphical user interfaces suggests that the decisions made in Vizmapper are significant steps in the right direction.
