--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -154,7 +154,7 @@
 	Date-Modified = {2011-07-26 16:05:13 -0400},
 	Month = {May},
 	Publisher = {Morgan Kaufmann},
-	Title = {Designing with the Mind in Mind: SImple Guide to Understanding User Interface Design Rules},
+	Title = {Designing with the Mind in Mind: Simple Guide to Understanding User Interface Design Rules},
 	Year = {2010}}
 
 @inproceedings{abstractiohierarchies1990,
