--- a/vijay_thesis.tex
+++ b/vijay_thesis.tex
@@ -77,6 +77,16 @@ This problem is exacerbated as the number of sensors that make up the control me
 
 This thesis builds upon work encompassed in two projects at the Input Devices and Musical Interaction Lab, the Digital Orchestra Project and Libmapper, to tackle the problem of building an interface/system for configuring a complex musical system without expert programming skills. The intent is to present a targeted survey of user interface design and data visualization design research through the years to inform the design of a graphical user interface for performing this configuration task.
 
+\section*{\centering R\'{e}sum\'{e}}
+
+Les instruments de musique num\'{e}riques, que l'on d\'{e}finit ici comme des syst\`{e}mes musicaux interactifs contenant un m\'{e}canisme de contr\^{o}le ainsi qu'un m\'{e}canisme de production sonore, constituent de puissants outils pour l'analyse des m\'{e}thodes de performance ainsi que pour la transformation et la red\'{e}finition de la la performance musicale. Cependant, la nature \'{e}ph\'{e}m\`{e}re des technologie digitales ainsi que la complexit\'{e} du maintien de la configuration d'un instrument de musique num\'{e}rique, comprenant des dizaines voire centaines de composantes discr\`{e}tes interconnect\'{e}es, pr\'{e}sente un r\'{e}el probl\`{e}me. 
+
+M\^{e}me les syst\`{e}mes musicaux acoustiques le plus complexes, comme le piano, sont assez robustes pour r\'{e}sister \`{a} l'usure quotidienne sans l'intervention d'une main experte ayant une connaissance aiguis\'{e}e des mat\'{e}riaux et de la m\'{e}canique de l'instrument. Par ailleurs, ces instruments sont assez standards pour que tout luthier qualifi\'{e} soit en mesure d'intervenir sur l'instrument en cas de besoin. A l'inverse, les instruments de musique num\'{e}riques pr\'{e}sentent souvent des configurations propres a chaque performance (cette configurabilit\'{e} \'{e}tant une des vertus des instruments digitaux), incluent divers type de syst\`{e}me hardware et software, et ne peuvent souvent \^{e}tre configur\'{e}s de mani\`{e}re fiable que par leur cr\'{e}ateur.
+
+Le probl\`{e}me grandit lorsque le nombre de capteurs utilis\'{e}s pour la partie contr\^{o}le d'un instrument augmente et que l'interaction entre les sous-blocs contr\^{o}le et production sonore se complexifient. Cette relation entre le m\'{e}canisme de contr\^{o}le et de production sonore est appel\'{e}e "mapping" de l'instrument. Le "mapping" d'un instrument se rapporte aux aspects les plus configurables d\'{e}finis par le logiciel (par opposition au \'{e}l\'{e}ments hardware), et mais aussi faisant partie les caract\'{e}ristiques les plus importantes de l'instrument. Dans le cas d'un instrument de musique num\'{e}rique, la capacit\'{e} a agir facilement sur la configuration devient alors un enjeux de libert\'{e} d'expression artistique, en plus d'une condition de p\'{e}rennisation.
+
+Ce travail de th\`{e}se se construit sur la base de deux projets men\'{e}s au sein du laboratoire IDMIL (Input Devices and Musical Interaction Lab), le "Digital Orchestra" et "Libmapper", et traite du probl\`{e}me de construction d'un syst\`{e}me/interface pour la configuration de syst\`{e}me musicaux complexes sans connaissances expertes en programmation. L'objectif est de pr\'{e}senter un sondage cibl\'{e} sur la recherche en conception d'interface utilisateur et visualisation de donn\'{e}es, dans le but d'apporter des \'{e}l\'{e}ments nouveaux a la conception d'interfaces destin\'{e}es aux taches de configuration d'instruments digitaux.
+
 \newpage
 
 \section*{\centering Acknowledgments}
@@ -85,7 +95,7 @@ Many thanks to my supervisor, Professor Marcelo M. Wanderley, for his abundance 
 
 I am grateful to have been in the presence of all the students and professors of Music Technology at McGill University. Never have I been part of a group of people who were so eager to offer their time to others who needed help, regardless of whether they had something to gain from it. Special thanks to Joseph Malloch and Stephen Sinclair, without whose help and hours of work on the Mapper Tools project I would never have been able to even contemplate this research project.
 
-I would never have made it to this point or survived the Montreal winters if it was not for Vincent Freour, a boundless source of energy who pulled me out into the sunlight even when I was determined to remain in my cave.
+I would never have survived the Montreal winters if it was not for Vincent Freour, a boundless source of energy who pulled me out into the sunlight even when I was determined to remain in my cave.
 
 Finally, infinite gratitude to my parents Pandu and Padma who have always and will continue to support me, no matter how seemingly useless and lost I may appear through my many journeys.
 
