--- a/vizmapper.tex
+++ b/vizmapper.tex
@@ -362,7 +362,7 @@ In order to make a connection, a user uses the \emph{view mode} to navigate down
 \begin{figure}[hp]
 \centering
 \includegraphics[width=0.88\textwidth]{vizmapperNine.png}
-\caption{After more connections between the other 3 Minibees and \textbf{/minibee.1/node.7}, \textbf{/minibee.1/node.8}, \textbf{/minibee.1/node.9} branches}
+\caption{View mode, showing additional connections between the remaining 3 Minibees and the next 3 available granular synth grains}
 \label{fig:vizNine}
 \end{figure}
 
@@ -395,14 +395,14 @@ The same 3 signal connections are made for each of 3 more pairs of clusters: \ve
 \begin{figure}[hp]
 \centering
 \includegraphics[width=0.88\textwidth]{vizmapperTen.png}
-\caption{Top level view of Mapper network signal hierarchy with all new connections summarized as 4 visual connections}
+\caption{Top level view of Mapper network signal hierarchy with the 12 new connections summarized as 4 visual connections}
 \label{fig:vizTen}
 \end{figure}
 
 \begin{figure}[hp]
 \centering
 \includegraphics[width=0.88\textwidth]{vizmapperEleven.png}
-\caption{Use of signal filter in top view to focus on relevant signal clusters}
+\caption{Use of signal filter in top level view to focus on relevant signal clusters}
 \label{fig:vizEleven}
 \end{figure}
 
